# Signum

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.standalone.yaml  docker-compose.yaml  drizzle.config.ts  env-cli.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx
frontend/src/lib/: api.ts  tokens.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
migrations/: 001_init.sql
review/: latest.json
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
scripts/: ci-check.sh
spec/code/: README.md
spec/data/: README.md
spec/interface/: README.md
src/: app.ts  index.ts
src/auth/: cernere-client.ts  user-info.ts
src/config/: env.ts
src/db/: connection.ts  migrate.ts  redis.ts  repository.ts  schema.ts
src/domain/: image.ts  tracer.ts
src/middleware/: audit.ts  auth.ts  request-id.ts
src/routes/: health.ts  me.ts  trace.ts
src/signum/: __init__.py  cli.py  tracer.py
src/ws/: hub.ts  session.ts
tests/: test_tracer.py  tracer.test.ts
